<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_full"
    android:orientation="vertical">
    <TextView
        style="@style/layout_vertical"
        android:textSize="20sp"
        android:textColor="@color/textSize"
        android:text="@string/HelpText"
        android:layout_weight="1"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeStepGranularity="1sp"
        />

    <LinearLayout
        style="@style/layout_vertical"
        android:layout_weight="7"
        android:orientation="horizontal"
        android:layout_marginHorizontal="8dp"
        >
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.8"
            android:orientation="vertical"
            >
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1.5"
                android:text="@string/CameraHelp"
                android:textSize="20sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/CameraHelp1"
                android:textSize="18sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/CameraHelp2"
                android:textSize="18sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/CameraHelp3"
                android:textSize="18sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />

            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:text="@string/CameraIPPrompt"
                android:textColor="@color/textSize"
                android:textSize="18sp" />

            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/CameraHelp4"
                android:textSize="18sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/CameraHelp5"
                android:textSize="18sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/CameraHelp6"
                android:textSize="18sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/CameraHelp7"
                android:textSize="18sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/CameraHelp8"
                android:textSize="18sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.8"
            android:orientation="vertical"
            >
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1.5"
                android:text="@string/ServerHelp"
                android:textSize="25sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeTextType="uniform"
                />
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/ServerHelp1"
                android:textSize="18sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/ServerHelp2"
                android:textSize="18sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/ServerHelp3"
                android:textSize="18sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/ServerHelp4"
                android:textSize="18sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/ServerHelp5"
                android:textSize="18sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                />
            <LinearLayout
                style="@style/layout_vertical"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                style="@style/layout_vertical"
                android:layout_weight="1"
                android:text="@string/GestureHelp"
                android:textSize="20sp"
                android:textColor="@color/textSize"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeTextType="uniform"
                />
            <LinearLayout
                style="@style/layout_vertical"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="@string/Forward"
                    android:textSize="20sp"
                    android:textColor="@color/textSize"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    />
                <ImageView
                    style="@style/layout_horizontal"
                    android:src="@drawable/forward1"
                    android:layout_weight="0.5"
                    />
                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="@string/PlayAndPause"
                    android:textSize="20sp"
                    android:textColor="@color/textSize"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    />
                <ImageView
                    style="@style/layout_horizontal"
                    android:src="@drawable/suspend1"
                    android:layout_weight="0.5"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/layout_vertical"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="@string/Back"
                    android:textSize="20sp"
                    android:textColor="@color/textSize"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    />
                <ImageView
                    style="@style/layout_horizontal"
                    android:src="@drawable/back1"
                    android:layout_weight="0.5"
                    />
                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="@string/MuteAndRecover"
                    android:textSize="20sp"
                    android:textColor="@color/textSize"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    />
                <ImageView
                    style="@style/layout_horizontal"
                    android:src="@drawable/play2"
                    android:layout_weight="0.5"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/layout_vertical"
                android:orientation="horizontal"
                android:layout_weight="1">
                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="@string/VolumeMin"
                    android:textSize="20sp"
                    android:textColor="@color/textSize"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    />
                <ImageView
                    style="@style/layout_horizontal"
                    android:src="@drawable/volumedown"
                    android:layout_weight="0.5"
                    />
                <TextView
                    style="@style/layout_horizontal"
                    android:layout_weight="1"
                    android:text="@string/VolumeMax"
                    android:textSize="20sp"
                    android:textColor="@color/textSize"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    />
                <ImageView
                    style="@style/layout_horizontal"
                    android:src="@drawable/volumeup"
                    android:layout_weight="0.5"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        style="@style/layout_vertical"
        android:layout_weight="1"
        android:text="@string/MattersNeedAttention"
        android:textColor="@color/textSize"
        android:textSize="20sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        />
</LinearLayout>