<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_full"
    android:orientation="vertical"
    >
    <LinearLayout
        style="@style/layout_vertical"
        android:layout_weight="0.5"
        />
    <Spinner
        style="@style/layout_vertical"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        android:id="@+id/cameraList"

        />
    <LinearLayout
        style="@style/layout_vertical"
        android:orientation="horizontal"
        android:layout_weight="0.8"
        >
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.25"
            />
        <TextView
            android:paddingTop="15sp"
            style="@style/layout_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeStepGranularity="1sp"
            android:text="@string/CameraIP"
            android:textColor="@color/textSize"
            />

        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/CameraIPPrompt"
                android:textColor="@color/textSize"
                android:textSize="13dp"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeStepGranularity="1sp"
                />

            <EditText
                android:id="@+id/cameraip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_input"
                android:hint="@string/InputCameraIPPrompt"
                android:inputType="text"
                android:paddingLeft="15sp"
                android:textSize="15sp"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="10sp"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeStepGranularity="1sp"
                android:textColor="@color/textSize"
                android:textColorHint="@color/textSize" />

        </LinearLayout>
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.25"
            >
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        style="@style/layout_vertical"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        >
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.25"
            />
        <TextView
            style="@style/layout_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/CameraPort"
            android:textSize="15sp"
            android:textColor="@color/textSize"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeStepGranularity="1sp"
            />
        <EditText
            android:id="@+id/cameraport"
            android:paddingLeft="15dp"
            style="@style/layout_horizontal"
            android:layout_weight="3"
            android:textSize="15sp"
            android:background="@drawable/border_input"
            android:hint="@string/InputCameraPortPrompt"
            android:inputType="text"
            android:textColor="@color/textSize"
            android:textColorHint="@color/textSize"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="1sp"
            />
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.25"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        style="@style/layout_vertical"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        >
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.25"
            />
        <TextView
            style="@style/layout_horizontal"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeStepGranularity="1sp"
            android:gravity="center"
            android:text="@string/CameraUserName"
            android:textColor="@color/textSize" />

        <EditText
            android:id="@+id/camerauser"
            android:paddingLeft="15dp"
            style="@style/layout_horizontal"
            android:layout_weight="3"
            android:textSize="15sp"
            android:background="@drawable/border_input"
            android:hint="@string/InputCameraUserPrompt"
            android:inputType="text"
            android:textColor="@color/textSize"
            android:textColorHint="@color/textSize"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="1sp"
            />
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.25"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        style="@style/layout_vertical"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        >
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.25"
            />
        <TextView
            style="@style/layout_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/CameraPassWord"
            android:textColor="@color/textSize"
            />

        <EditText
            android:id="@+id/camerapassword"
            style="@style/layout_horizontal"
            android:layout_weight="3"
            android:background="@drawable/border_input"
            android:hint="@string/InputCameraPassWordPrompt"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textSize="15sp"
            android:textColor="@color/textSize"
            android:textColorHint="@color/textSize"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="1sp"
            />
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.25"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        style="@style/layout_vertical"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        >
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.25"
            />
        <TextView
            style="@style/layout_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/CameraProtocol"
            android:textColor="@color/textSize"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeStepGranularity="1sp"
            />
        <EditText
            android:id="@+id/cameraagreement"
            android:paddingLeft="20dp"
            style="@style/layout_horizontal"
            android:layout_weight="3"
            android:background="@drawable/border_input"
            android:hint="@string/InputCameraProtocolPrompt"
            android:inputType="text"
            android:textSize="15sp"
            android:textColor="@color/textSize"
            android:textColorHint="@color/textSize"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="1sp"
            />
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.25"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        style="@style/layout_vertical"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        >
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.25"
            />
        <TextView
            style="@style/layout_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/CameraURL"
            android:textColor="@color/textSize"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeStepGranularity="1sp"
            />

        <EditText
            android:id="@+id/cameraurl"
            style="@style/layout_horizontal"
            android:layout_weight="3"
            android:autoSizeMaxTextSize="15sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="1sp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/border_input"
            android:hint="@string/InputCameraURLPrompt"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textSize="15sp"
            android:textColor="@color/textSize"
            android:textColorHint="@color/textSize" />

        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="0.25"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/layout_vertical"
        android:layout_weight="0.25"/>
    <LinearLayout
        android:layout_weight="0.5"
        style="@style/layout_vertical"
        android:orientation="horizontal"
        >
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="1.25"
            />
        <Button
            android:layout_weight="1"
            android:id="@+id/camerabtn"
            style="@style/layout_horizontal"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textSize="12dp"
            android:background="@drawable/border_button"
            android:textColor="@color/textSize"
            android:layout_marginVertical="3dp"
            />
        <LinearLayout
            style="@style/layout_horizontal"
            android:layout_weight="1.25"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/layout_vertical"
        android:layout_weight="0.25"/>

</LinearLayout>